feat: Message entity with working endpoints for creation
